--- a/emsidi/src/main/resources/templates/delete-cabang.html
+++ b/emsidi/src/main/resources/templates/delete-cabang.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
+
 <head>
     <title>Emsidi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+        <object th:include="fragments/fragment :: js" th:remove="tag"></object>
+    </head>
 
-</head>
-<body>
+    <body>
+    <nav th:replace="fragments/fragment :: navbar('Cabang')"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
-                <h2 th:text="'Cabang dengan nomor ' + ${noCabang} + ' berhasil dihapus'"></h2>
-                <a class="btn btn-primary" href="/">Kembali ke Home</a>
+                <br>
+                <h2
+                        th:text="'Cabang Emsidi dengan nomor '+${noCabang}+ ' telah berhasil dihapus'">
+                </h2>
+                <a class="btn btn-primary" th:href="@{/cabang/viewall}">Kembali</a>
+
             </div>
         </div>
     </div>
 </div>
 
 </body>
+
 </html>
