--- a/emsidi/src/main/resources/templates/form-update-pegawai.html
+++ b/emsidi/src/main/resources/templates/form-update-pegawai.html
@@ -2,39 +2,43 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head>
-  <title>Emsidi</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <title>Emsidi</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 
 <body>
+<nav th:replace="fragments/fragment :: navbar('Home')"></nav>
 <div class="container">
-  <div class="card m-4 p-4">
-    <div class="card-body">
-      <div class="justify-content-center">
-        <h2>Form Edit Pegawai</h2>
-        <br>
-        <form th:action="@{/pegawai/update}" th:object="${pegawai}" method="POST">
-          <input type="hidden" th:field="*{noPegawai}" />
+    <div class="card m-4 p-4">
+        <div class="card-body">
+            <div class="justify-content-center">
+                <h2>Update Pegawai</h2>
+                <br>
+                <form th:action="@{/pegawai/update}" th:object="${pegawai}" method="POST">
+                    <input type="hidden" th:field="*{cabang}" />
+                    <input type="hidden" th:field="*{noPegawai}" />
 
-          <input class="form-control" type="hidden" name="noCabang" th:value="${noCabang}"/>
+                    Nama Pegawai : <br>
+                    <input required class="form-control" type="text" name="namaPegawai" th:value="*{namaPegawai}"/>
+                    <br>
 
-          Nama Pegawai : <br>
-          <input class="form-control" type="text" name="namaPegawai" th:value="*{namaPegawai}"/>
-          <br><br>
+                    Jenis Kelamin : <br>
+                    <select name="jenisKelamin">
+                        <option value="0" th:if="*{jenisKelamin == 0}" selected>Perempuan</option>
+                        <option value="0" th:unless="*{jenisKelamin == 0}">Perempuan</option>
+                        <option value="1" th:if="*{jenisKelamin == 1}" selected>Laki Laki</option>
+                        <option value="1" th:unless="*{jenisKelamin == 1}">Laki Laki</option>
+                    </select>
 
-          Jenis Kelamin : <br>
-          <select name="jenisKelamin">
-            <option value="0">Perempuan</option>
-            <option value="1">Laki-laki</option>
-          </select>
-          <br><br>
+                    <br><br>
 
-          <button class="btn btn-primary" type="submit">Update</button>
-        </form>
-      </div>
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                    <a class="btn btn-primary" th:href="@{/cabang/view(noCabang=${noCabang})}">Cancel</a>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 </body>
