--- a/emsidi/src/main/resources/templates/home.html
+++ b/emsidi/src/main/resources/templates/home.html
@@ -16,11 +16,11 @@
         <h2>Selamat datang di Emsidi</h2>
         <div class="d-flex justify-content-center">
             <a th:href="@{/cabang/viewall}" class="mx-2 btn btn-dark">Lihat semua cabang</a>
-            <a th:href="@{/cabang/add}" class="mx-2 btn btn-dark">Tambah cabang</a>
+            <a th:href="@{/cabang/add}" class="mx-2 btn btn-outline-dark">Tambah cabang</a>
         </div>
         <div class="my-3 d-flex justify-content-center"></div>
         <a th:href="@{/menu/viewall}" class="mx-2 btn btn-dark">Lihat semua menu</a>
-        <a th:href="@{/menu/add}" class="mx-2 btn btn-dark">Tambah menu</a>
+        <a th:href="@{/menu/add}" class="mx-2 btn btn-outline-dark">Tambah menu</a>
     </div>
 </div>
 
